<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:background="#eeb4ee"
    android:clickable="false">

    <EditText
        android:id="@+id/textField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:textIsSelectable="false"
        android:textSize="60sp"
        android:text="@string/textFieldFirstText"
        android:textColor="#ff25c370"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_weight = "1"
        android:paddingRight="20dp"
        android:paddingBottom="0dp"
        android:background="#ffe5e5f8" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="NewApi,UselessLeaf"
        android:id="@+id/buttonGridLayout"
        android:orientation="vertical"
        android:layout_weight = "2"
        android:layout_gravity="bottom">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonEquals"
            android:id="@+id/buttonEquals"
            android:layout_row="3"
            android:onClick="buttonClicked"
            android:layout_column="2"
            android:layout_weight = "1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button0"
            android:id="@+id/button0"
            android:layout_row="3"
            android:onClick="buttonClicked"
            android:layout_column="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:layout_weight = "1"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center|fill"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlus"
            android:id="@+id/buttonPlus"
            android:layout_row="3"
            android:layout_weight = "1"
            android:onClick="buttonClicked"
            android:layout_column="3"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            android:onClick="buttonClicked"
            android:id="@+id/button7"
            android:layout_weight = "1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:onClick="buttonClicked"
            android:id="@+id/button5"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_weight = "1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:onClick="buttonClicked"
            android:id="@+id/button6"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="30sp"
            android:layout_weight = "1"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClicked"
            android:text="@string/buttonMultiply"
            android:id="@+id/buttonMultiply"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_marginRight="0dp"
            android:layout_margin="0dp"
            android:layout_weight = "1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:onClick="buttonClicked"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:layout_weight = "1"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDot"
            android:id="@+id/buttonDot"
            android:layout_weight = "1"
            android:layout_row="3"
            android:onClick="buttonClicked"
            android:layout_column="0"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:onClick="buttonClicked"
            android:layout_weight = "1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9"
            android:id="@+id/button9"
            android:layout_weight = "1"
            android:onClick="buttonClicked"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDivide"
            android:id="@+id/buttonDivide"
            android:onClick="buttonClicked"
            android:layout_weight = "1"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:onClick="buttonClicked"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="30sp"
            android:textStyle="normal"
            android:layout_weight = "1"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_row="2"
            android:onClick="buttonClicked"
            android:layout_column="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:layout_weight = "1"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_weight = "1"
            android:onClick="buttonClicked"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMinus"
            android:id="@+id/buttonMinus"
            android:layout_weight = "1"
            android:onClick="buttonClicked"
            android:layout_row="2"
            android:layout_column="3"
            android:textSize="30sp"
            android:textStyle="normal"
            android:background="#ff25c370"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="bottom|center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:nestedScrollingEnabled="false" />

    </GridLayout>




</LinearLayout>
